// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleField should render correctly 1`] = `
<DocumentFragment>
  .cache-16r4i0r {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-16r4i0r:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-16r4i0r[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1ywhivs {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1gs9f7m {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1gs9f7m:hover {
  background-color: #d9dadd;
}

.cache-1gs9f7m:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1gs9f7m:focus-within,
.cache-1gs9f7m:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-1gs9f7m[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1gs9f7m[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.cache-1gs9f7m[data-checked='true']:hover {
  background-color: #792dd4;
}

.cache-1gs9f7m[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1gs9f7m[data-checked='true']:focus-within,
.cache-1gs9f7m[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-1gs9f7m[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-1gs9f7m[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-p9zju0 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-p9zju0[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="cache-16r4i0r e1wstm610"
    >
      <div
        class="cache-1ywhivs ehpbis70"
      />
      <div
        class="cache-1gs9f7m e1wstm612"
        data-checked="false"
        data-disabled="false"
      >
        <input
          aria-checked="false"
          class="cache-p9zju0 e1wstm611"
          id=":r0:"
          name="test"
          type="checkbox"
          value=""
        />
      </div>
    </label>
  </form>
</DocumentFragment>
`;

exports[`ToggleField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-16r4i0r {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-16r4i0r:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-16r4i0r[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1ywhivs {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1gs9f7m {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1gs9f7m:hover {
  background-color: #d9dadd;
}

.cache-1gs9f7m:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1gs9f7m:focus-within,
.cache-1gs9f7m:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-1gs9f7m[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1gs9f7m[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.cache-1gs9f7m[data-checked='true']:hover {
  background-color: #792dd4;
}

.cache-1gs9f7m[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1gs9f7m[data-checked='true']:focus-within,
.cache-1gs9f7m[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-1gs9f7m[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-1gs9f7m[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-p9zju0 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-p9zju0[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="cache-16r4i0r e1wstm610"
    >
      <div
        class="cache-1ywhivs ehpbis70"
      />
      <div
        class="cache-1gs9f7m e1wstm612"
        data-checked="true"
        data-disabled="false"
      >
        <input
          aria-checked="true"
          checked=""
          class="cache-p9zju0 e1wstm611"
          id=":r4:"
          name="test"
          type="checkbox"
          value=""
        />
      </div>
    </label>
  </form>
</DocumentFragment>
`;

exports[`ToggleField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-16r4i0r {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-16r4i0r:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-16r4i0r[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1ywhivs {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1gs9f7m {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1gs9f7m:hover {
  background-color: #d9dadd;
}

.cache-1gs9f7m:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1gs9f7m:focus-within,
.cache-1gs9f7m:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-1gs9f7m[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1gs9f7m[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.cache-1gs9f7m[data-checked='true']:hover {
  background-color: #792dd4;
}

.cache-1gs9f7m[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1gs9f7m[data-checked='true']:focus-within,
.cache-1gs9f7m[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-1gs9f7m[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-1gs9f7m[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-p9zju0 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-p9zju0[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="true"
      class="cache-16r4i0r e1wstm610"
    >
      <div
        class="cache-1ywhivs ehpbis70"
      />
      <div
        class="cache-1gs9f7m e1wstm612"
        data-checked="false"
        data-disabled="true"
      >
        <input
          aria-checked="false"
          class="cache-p9zju0 e1wstm611"
          disabled=""
          id=":r2:"
          name="test"
          type="checkbox"
          value=""
        />
      </div>
    </label>
  </form>
</DocumentFragment>
`;

exports[`ToggleField should render correctly with label and checked 1`] = `
<DocumentFragment>
  .cache-16r4i0r {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-16r4i0r:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-16r4i0r[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1ywhivs {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-okwmur {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-1gs9f7m {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1gs9f7m:hover {
  background-color: #d9dadd;
}

.cache-1gs9f7m:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1gs9f7m:focus-within,
.cache-1gs9f7m:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-1gs9f7m[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1gs9f7m[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.cache-1gs9f7m[data-checked='true']:hover {
  background-color: #792dd4;
}

.cache-1gs9f7m[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1gs9f7m[data-checked='true']:focus-within,
.cache-1gs9f7m[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-1gs9f7m[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-1gs9f7m[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-p9zju0 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-p9zju0[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="cache-16r4i0r e1wstm610"
    >
      <div
        class="cache-1ywhivs ehpbis70"
      >
        <div
          class="cache-okwmur e3f5lzv0"
        >
          test
        </div>
      </div>
      <div
        class="cache-1gs9f7m e1wstm612"
        data-checked="true"
        data-disabled="false"
      >
        <input
          aria-checked="true"
          checked=""
          class="cache-p9zju0 e1wstm611"
          id=":r6:"
          name="test"
          type="checkbox"
          value=""
        />
      </div>
    </label>
  </form>
</DocumentFragment>
`;
